app/globals.css
@import "tailwindcss";
@import "tw-animate-css";
/*

---break---

*/
@custom-variant dark (&:is(.dark *));

/*

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
}

*/

.hero-bg {
  background-image: url("/sickle-cell.jpg");
  background-repeat: no-repeat;
  background-position: center;
  background-clip: border-box;
  aspect-ratio: inherit;
  object-fit: cover;
}

.side-image {
  background-image: url("/exercise.jpg");
  background-repeat: no-repeat;
  background-position: center;
  background-clip: border-box;
  object-fit: cover;
}

@media (min-width: 1024px) {
  .hero-bg {
    background-clip: padding-box;
  }
}

@theme {

  --color-background: #ffffff;
  --color-on-background: #141a21;
  --color-background-container: #e1e3e6;
  --color-on-background-container: #2c343d;

  --color-primary: #e23c27;
  --color-on-primary: #4f0e07;
  --color-primary-container: #ffdad5;
  --color-on-primary-container: #9b2414;

  --color-secondary: #3bb9c9;
  --color-on-secondary: #04363d;
  --color-secondary-container: #ccf1f6;
  --color-on-secondary-container: #147a85;
}

.nav-link-button:hover {
  background-color: var(--color-primary-container);
  color: var(--color-on-primary-container);
}

.nav-link:hover {
  color: var(--color-secondary);
}

.footer-link:hover {
  color: var(--color-on-background-container);
}

